--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,8 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Upload to webhostapp
-        run: ls 
+        run: |
+          pwd
+          ls
     
       
