--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,12 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Upload to webhostapp
-        uses: sebastianpopp/ftp-action@v2.0.0
+        uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with:
-          host: files.000webhost.com
-          user: mirthu-online-class
+          server: files.000webhost.com
+          username: mirthu-online-class
           password: password@123
-          remoteDir: public_html/
+          port: 21
+          server-dir: public_html/
     
       
