--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,12 @@ jobs:
         username: mirthu-online-class
         password: ${{ secrets.ftp_password }}
         server-dir: public_html/
+      
+    - name: cURL AxiosJS
+      uses: indiesdev/curl@v1
+      with:
+        url: https://api.cloudinary.com/v1_1/pidile/image/upload
+        method: POST
+        body: public_html/assets/img/time_table.jpg
     
       
