--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Upload S3
       uses: shallwefootball/upload-s3-action@v1.1.3
       with:
-        aws_key_id: ${{ secrets.aws-Key_id }}
+        aws_key_id: ${{ secrets.aws_Key_id }}
         aws_secret_access_key: ${{ secrets.aws_secret_key }}
         aws_bucket: mirthun-online-class
         source_dir: /
