--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         
     - name: Temprary copy
       run: |
-        mkdir s3-upload
+        mkdir ../s3-upload
         cp -rf ../mirthu-online-class/* s3-upload/
         
     - name: Upload S3
