--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,18 +29,16 @@ jobs:
         username: mirthu-online-class
         password: ${{ secrets.ftp_password }}
         server-dir: public_html/
-        
-        
-    - name: Temprary copy
-      run: |
-        mkdir ../s3-upload
-        cp -rf ../mirthu-online-class/* ../s3-upload/
+
         
     - name: Upload S3
-      uses: shallwefootball/upload-s3-action@v1.1.3
+      uses: tpaschalis/s3-cp-action@v0.2.0
       with:
-        aws_key_id: ${{ secrets.aws_Key_id }}
-        aws_secret_access_key: ${{ secrets.aws_secret_key }}
-        aws_bucket: mirthun-online-class
-        source_dir: s3-upload
+        args: --acl public-read
+      env:
+        FILE: ./
+        AWS_ACCESS_KEY_ID: ${{ secrets.aws_Key_id }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_secret_key }}
+        AWS_REGION: 'ap-south-1'
+        AWS_S3_BUCKET: mirthun-online-class
 
