--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,8 @@ jobs:
         server-dir: public_html/
 
         
-    - name: Upload S3
-      uses: RandhirMSingh/S3Manager@main
+    - name: Upload to S3
+      uses: and-cru/actions-s3-static-upload@v12
       with:
         args: --recursive
       env:
@@ -40,5 +40,6 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.aws_Key_id }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_secret_key }}
         AWS_REGION: 'ap-south-1'
-        AS3_BUCKET: mirthun-online-class
+        s3-bucket-name: mirthun-online-class
+        folder: build
 
