--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,9 @@ jobs:
     - name: Upload to S3
       uses: awact/s3-action@0.1.1
       with:
+        AWS_REGION: 'ap-south-1'
+        AWS_S3_BUCKET: ${{ secrets.S3_BUCKET_NAME }}
         AWS_ACCESS_KEY_ID: ${{ secrets.aws_Key_id }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_secret_key }}
-        AWS_S3_BUCKET: 'mirthun-online-class'
-        AWS_REGION: 'ap-south-1'
+        
+        
