--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,11 +32,12 @@ jobs:
 
         
     - name: Upload to S3
-      uses: awact/s3-action@0.1.1
+      uses: and-cru/actions-s3-static-upload@v12
       with:
-        AWS_REGION: 'ap-south-1'
-        AWS_S3_BUCKET: ${{ secrets.S3_BUCKET_NAME }}
+        milliseconds: 500
+        s3-bucket-name: ${{ secrets.S3_BUCKET_NAME }}
+        folder: mirthu-online-class
         AWS_ACCESS_KEY_ID: ${{ secrets.aws_Key_id }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_secret_key }}
-        
+        AWS_REGION: 'ap-south-1'
         
