--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,12 +32,10 @@ jobs:
 
         
     - name: Upload to S3
-      uses: and-cru/actions-s3-static-upload@v12
+      uses: stcalica/s3-upload@0.0.1
       with:
-        milliseconds: 500
-        s3-bucket-name: ${{ secrets.S3_BUCKET_NAME }}
-        folder: ./index.html
-        AWS_ACCESS_KEY_ID: ${{ secrets.aws_Key_id }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_secret_key }}
+        bucket: ${{ secrets.S3_BUCKET_NAME }}
+        AWS_SECRET_KEY: ${{ secrets.aws_Key_id }}
+        AWS_SECRET_ID: ${{ secrets.aws_secret_key }}
         AWS_REGION: 'ap-south-1'
         
