--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,10 +32,14 @@ jobs:
 
         
     - name: Upload to S3
-      uses: stcalica/s3-upload@0.0.1
+      uses: jakejarvis/s3-sync-action@master
       with:
-        bucket: ${{ secrets.S3_BUCKET_NAME }}
-        AWS_SECRET_KEY: ${{ secrets.aws_Key_id }}
-        AWS_SECRET_ID: ${{ secrets.aws_secret_key }}
+        args: --acl public-read --follow-symlinks --delete
+      env:
+        AWS_S3_BUCKET: ${{ secrets.S3_BUCKET_NAME }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.aws_Key_id }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_secret_key }}
+        AWS_REGION: 'ap-south-1'
+        
         AWS_REGION: 'ap-south-1'
         
