--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,17 +21,8 @@ jobs:
     steps:
     - name: 🚚 Get latest code
       uses: actions/checkout@v2.3.2
-    
-    - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@4.0.0
-      with:
-        server: files.000webhost.com
-        username: mirthu-online-class
-        password: ${{ secrets.ftp_password }}
-        server-dir: public_html/
-
         
-    - name: Upload to S3
+    - name: 📂 S3 Sync
       uses: jakejarvis/s3-sync-action@master
       with:
         args: --acl public-read --follow-symlinks --delete
@@ -39,5 +30,15 @@ jobs:
         AWS_S3_BUCKET: ${{ secrets.S3_BUCKET_NAME }}
         AWS_ACCESS_KEY_ID: ${{ secrets.aws_Key_id }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_secret_key }}
-        AWS_REGION: 'ap-south-1'
+        AWS_REGION: 'ap-south-1'      
+    
+    - name: 📂 Sync files to 000webhost
+      uses: SamKirkland/FTP-Deploy-Action@4.0.0
+      with:
+        server: files.000webhost.com
+        username: mirthu-online-class
+        password: ${{ secrets.ftp_password }}
+        server-dir: public_html/
+
+
         
