--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,8 +44,7 @@ jobs:
       uses: pixta-dev/repository-mirroring-action@v1
       with:
         ssh_private_key: ${{ secrets.bitbucket_private_key }}
-        target_repo_url: https://bitbucket.org/Pidile007/mirthu-online-class.git
-        ssh_username: git
+        target_repo_url: git@bitbucket.org:Pidile007/mirthu-online-class.git
 
 
         
