bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -13,8 +13,10 @@ pipelines:
         name: 'Deployment to Staging'
         deployment: staging
         script:
-          - pwd
-          - ls -lrth
+          - git remote add sync git@github.com:pidile007/test.git
+          - git checkout main
+          - git pull
+          - git push sync main
     - step:
         name: 'Deployment to Production'
         deployment: production
