bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,10 +10,9 @@ pipelines:
 
     # The following deployment steps will be executed for each pipeline run. To configure your steps and conditionally deploy see https://support.atlassian.com/bitbucket-cloud/docs/configure-bitbucket-pipelinesyml/
     - step:
-        name: 'Deployment to Staging'
-        deployment: staging
+        name: 'Sync to Github'
         script:
-          - git remote add sync git@github.com:pidile007/test.git
+          - git remote add sync git@github.com:pidile007/mirthu-online-class.git
           - git checkout main
           - git pull
           - git push -f sync main
