--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -13,10 +13,9 @@ pipelines:
             - echo ${DOCKERHUB_PASSWORD} | docker login --username "$DOCKERHUB_USERNAME" --password-stdin
             - IMAGE_NAME=$BITBUCKET_REPO_SLUG
             - VERSION="${BITBUCKET_BUILD_NUMBER}"
-            - IMAGE=pidile007/${IMAGE_NAME}
-            - docker build . --file Dockerfile --tag pidile007/${IMAGE_NAME}
-            - docker tag "${IMAGE_NAME}" "${IMAGE}:${VERSION}"
-            - docker push "${IMAGE}:${VERSION}"
+            - IMAGE=pidile007/${IMAGE_NAME}:latest
+            - docker build . --file Dockerfile --tag ${IMAGE}
+            - docker push "${IMAGE}"
             services:
               - docker
             caches:
@@ -28,40 +27,4 @@ pipelines:
               - git checkout main
               - git pull
               - git push -f sync main
-  branches:
-    master:
-      - step:
-          name: Build and Test
-          script:
-            - IMAGE_NAME=$BITBUCKET_REPO_SLUG
-            - docker build . --file Dockerfile --tag ${IMAGE_NAME}
-            - docker save ${IMAGE_NAME} --output "${IMAGE_NAME}.tar"
-          services:
-            - docker
-          caches:
-            - docker
-          artifacts:
-            - "*.tar"
-      - step:
-          name: Deploy to Production
-          deployment: Production
-          script:
-            - echo ${DOCKERHUB_PASSWORD} | docker login --username "$DOCKERHUB_USERNAME" --password-stdin
-            - IMAGE_NAME=$BITBUCKET_REPO_SLUG
-            - docker load --input "${IMAGE_NAME}.tar"
-            - VERSION="prod-0.1.${BITBUCKET_BUILD_NUMBER}"
-            - IMAGE=${DOCKERHUB_NAMESPACE}/${IMAGE_NAME}
-            - docker tag "${IMAGE_NAME}" "${IMAGE}:${VERSION}"
-            - docker push "${IMAGE}:${VERSION}"
-          services:
-            - docker
-
-    # The following deployment steps will be executed for each pipeline run. To configure your steps and conditionally deploy see https://support.atlassian.com/bitbucket-cloud/docs/configure-bitbucket-pipelinesyml/
-      - step:
-          name: 'Sync to Github'
-          script:
-            - git remote add sync git@github.com:pidile007/mirthu-online-class.git
-            - git checkout main
-            - git pull
-            - git push -f sync main
-
+  
