--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -16,7 +16,7 @@ pipelines:
             - IMAGE=pidile007/${IMAGE_NAME}
             - docker build . --file Dockerfile --tag pidile007/${IMAGE_NAME}
             - docker tag "${IMAGE_NAME}" "${IMAGE}:latest"
-            - docker push "${IMAGE}:latest}"
+            - docker push "${IMAGE}:latest"
             services:
               - docker
             caches:
