--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,8 @@ jobs:
     - name: Docker Build, Tag & Push
       uses: mr-smithers-excellent/docker-build-push@v3
       with:
-        image: pidile007/mirthu-online-class:github
+        image: pidile007/mirthu-online-class
+        tags: github
         registry: docker.io
         username: pidile007
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
