--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,13 +40,13 @@ jobs:
         registry: docker.io
         username: pidile007
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
-    - name: 📂 Sync files to 000webhost
-      uses: SamKirkland/FTP-Deploy-Action@4.0.0
-      with:
-        server: files.000webhost.com
-        username: mirthu-online-class
-        password: ${{ secrets.ftp_password }}
-        server-dir: public_html/
+#    - name: 📂 Sync files to 000webhost
+#      uses: SamKirkland/FTP-Deploy-Action@4.0.0
+#      with:
+#        server: files.000webhost.com
+#        username: mirthu-online-class
+#        password: ${{ secrets.ftp_password }}
+#        server-dir: public_html/
 
 
 
